first Interface & imports commit

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,1 +1,3 @@
 <h2>Product</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi nemo perferendis quam reprehenderit suscipit.
+  Atque laboriosam laborum nisi omnis vel. Aspernatur, culpa earum ipsam nobis officia pariatur quidem quod tempora!</p>
