--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1 class="font-bold mb-2 text-center text-lg">{{title|titlecase}}</h1>
-<app-product></app-product>
+<div class="max-w-2xl container mx-auto pt-5">
+  <h1 class="font-bold mb-2 text-center text-lg">{{title|titlecase}}</h1>
+  <app-product></app-product>
+</div>
