--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,3 +1,4 @@
-<h2>Product</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi nemo perferendis quam reprehenderit suscipit.
-  Atque laboriosam laborum nisi omnis vel. Aspernatur, culpa earum ipsam nobis officia pariatur quidem quod tempora!</p>
+<div class="py-4 px-6 border rounded flex items-center flex-col mb-2">
+  <img [src]="product.image" [alt]="product.title" class="w-1/6 mb-2">
+  <h2 class="mb-2 text-lg text-center">{{product.title}}</h2>
+</div>
