--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,4 +1,17 @@
 <div class="py-4 px-6 border rounded flex items-center flex-col mb-2">
   <img [src]="product.image" [alt]="product.title" class="w-1/6 mb-2">
-  <h2 class="mb-2 text-lg text-center">{{product.title}}</h2>
+  <h2 class="mb-2 text-md text-center">{{product.title}}</h2>
+  <p> Price: <span class="font-bold">{{product.price|currency:'PLN'}}</span></p>
+
+  <button
+    class="border py-2 px-4 rounded bg-yellow-300"
+    (click)="details=!details"
+  >{{!details ? 'Show Details' : 'Hidden'}}
+  </button>
+
+  <div *ngIf="details">
+    <p>{{product.description}}</p>
+    <p>{{product.rating.rate}}</p>
+  </div>
+
 </div>
