--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -7,7 +7,8 @@
     class="border py-2 px-4 rounded bg-yellow-300"
     [ngClass]="{
     'bg-yellow-300':!details,
-    'bg-pink-300':details
+    'bg-pink-300':details,
+    'text-white':details
     }"
     (click)="details=!details"
   >
