--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,8 @@
       [product]="product">
     </app-product>
   </div>
-
+  <app-modal>
+    <app-create-product></app-create-product>
+  </app-modal>
 
 </div>
