--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
       [product]="product">
     </app-product>
   </div>
-  <app-modal>
+  <app-modal title="Create new product">
     <app-create-product></app-create-product>
   </app-modal>
 
