--- a/src/app/components/create-product/create-product.component.html
+++ b/src/app/components/create-product/create-product.component.html
@@ -1,7 +1,14 @@
-<form>
+<form [formGroup]="form" (ngSubmit)="submit()">
   <input type="text"
          class="order w-full py-2 px-4 mb-2"
-         placeholder="Product name:">
+         placeholder="Product name:"
+         formControlName="title"
+  >
+
+  <p class="text-red-600 font-medium mb-2"
+     *ngIf="title.errors?.minlength"
+  >Please fill title field with min length</p>
+
   <button class="py-2 px-4 bg-blue-600 text-white"
   >Create
   </button>
