--- a/src/app/components/create-product/create-product.component.html
+++ b/src/app/components/create-product/create-product.component.html
@@ -3,11 +3,12 @@
          class="order w-full py-2 px-4 mb-2"
          placeholder="Product name:"
          formControlName="title"
+         appFocus
   >
 
   <p class="text-red-600 font-medium mb-2"
-     *ngIf="title.errors?.minlength"
-  >Please fill title field with min length</p>
+     *ngIf="title.errors?.minlength && title.touched"
+  >Please fill title field with 5 letter min length. Now : {{title.value.length}}</p>
 
   <button class="py-2 px-4 bg-blue-600 text-white"
   >Create
