--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,13 @@
       [product]="product">
     </app-product>
   </div>
-  <app-modal title="Create new product">
+  <app-modal title="Create new product" *ngIf="modalService.isVisible$|async">
     <app-create-product></app-create-product>
   </app-modal>
 
+  <button
+    class="rounded-full bg-purple-600 text-white fixed right-5 bottom-5 py-2 px-4"
+    (click)="modalService.open()"
+  >+
+  </button>
 </div>
