--- a/src/app/pages/product-page/product-page.component.html
+++ b/src/app/pages/product-page/product-page.component.html
@@ -1,5 +1,5 @@
 
-<h1 class="font-bold mb-2 text-center text-lg">{{title|titlecase}}</h1>
+<h1 class="font-bold mb-2 text-center text-lg text-purple-600">{{title|titlecase}}</h1>
 <input type="text" class="mb-2 border py-2 px-4 w-full" placeholder="Search..." [(ngModel)]="term">
 
 <p *ngIf="loading" class="text-center text-lg">Loading ...</p>
@@ -17,5 +17,5 @@
 <button
   class="rounded-full bg-purple-600 text-white fixed right-5 bottom-5 py-2 px-4"
   (click)="modalService.open()"
->+
+>ADD
 </button>
