--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="absolute top-0 right-0 left-0 h-[50px] flex justify-between items-center text-white bg-purple-600">
+<nav class="absolute top-0 right-0 left-0 h-[50px] flex justify-between items-center text-white bg-purple-600 px-5">
 
   <h1 class="text-white font-bold ml-5">Angular APP</h1>
   <span>
